--- a/src/app/styles/Projects.module.css
+++ b/src/app/styles/Projects.module.css
@@ -105,7 +105,7 @@
 
 @media only screen and (max-width: 1029px) {
     .gridCont {
-        margin: 0 2em 2em 2em;
+        margin: 0;
     }
 
     .projectLinkCont {
